# apparatus

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: greet.rs  retro_racer.rs  retro_racer.rs.orig
examples/geometry/: README.md  main.rs
examples/mini_platformer/: README.md  main.rs
examples/mini_rpg/: README.md  main.rs
examples/perlin_noise/: README.md  main.rs
examples/retro_racer/: README.md  main.rs
examples/worms/: README.md  main.rs
src/: color.rs  errors.rs  font.rs  lib.rs  lib.rs.orig  maths.rs  util.rs
src/engine/: apparatus.rs  clock.rs  game.rs  input.rs  key.rs  logger.rs  mod.rs  mouse.rs  renderer.rs  sprite.rs
src/platform/: framebuffer.rs  input.rs  mod.rs  window.rs
src/renderer/: bresenham.rs  mod.rs  renderer2d.rs  software_2d.rs
