[package]
name = "firefly"
version = "0.1.0"
edition = "2021"

[dependencies]
fontdue = "0.6"
image = { version = "0.24", default-features = false, features = ["png"] }
minifb = "0.20"
thiserror = "1"

[dev-dependencies]
anyhow = "1"

[[example]]
name = "retro-racer"
path = "examples/retro_racer/main.rs"

[profile.dev]
opt-level = 3               # Enable all optimisations.
debug = 2                   # Enable full debug info.
debug-assertions = true     # Enable debug assert.
overflow-checks = true      # Enable integer overflow checks.
lto = "thin"                # Enable some link time optimisations.
incremental = true          # Enable incremental compilation.
