[package]
name = "apparatus"
version = "0.0.1"
edition = "2021"
description = "A 2D game engine"
license = "MIT"
repository = "https://github.com/junglie85/apparatus"
readme = "README.md"
keywords = ["gamedev", "game", "engine", "2d"]
categories = ["game-development", "game-engines"]

[dependencies]
flexi_logger = { version = "0.22", features = ["async", "use_chrono_for_offset"] }
fontdue = "0.6"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
minifb = "0.20"
thiserror = "1"

[dev-dependencies]
anyhow = "1"

[[example]]
name = "retro-racer"
path = "examples/retro_racer/main.rs"

[profile.dev]
opt-level = 3               # Enable all optimisations.
debug = 2                   # Enable full debug info.
debug-assertions = true     # Enable debug assert.
overflow-checks = true      # Enable integer overflow checks.
lto = "thin"                # Enable some link time optimisations.
incremental = true          # Enable incremental compilation.
