[package]
name = "apparatus"
version = "0.0.3"
edition = "2021"
description = "A 2D game engine"
license = "MIT"
repository = "https://github.com/junglie85/apparatus"
readme = "README.md"
keywords = ["gamedev", "game", "engine", "2d"]
categories = ["game-development", "game-engines"]

[dependencies]
flexi_logger = { version = "0.22", features = ["async", "use_chrono_for_offset"] }
fontdue = "0.6"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
minifb = "0.20"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
rand = "0.8"

[[example]]
name = "geometry"
path = "examples/geometry/main.rs"

[[example]]
name = "mini-platformer"
path = "examples/mini_platformer/main.rs"

[[example]]
name = "mini-rpg"
path = "examples/mini_rpg/main.rs"

[[example]]
name = "perlin-noise"
path = "examples/perlin_noise/main.rs"

[[example]]
name = "retro-racer"
path = "examples/retro_racer/main.rs"

[[example]]
name = "worms"
path = "examples/worms/main.rs"

[profile.dev]
opt-level = 3               # Enable all optimisations.
debug = 2                   # Enable full debug info.
debug-assertions = true     # Enable debug assert.
overflow-checks = true      # Enable integer overflow checks.
lto = "thin"                # Enable some link time optimisations.
incremental = true          # Enable incremental compilation.
